Adding in style sheet for html file

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>CS50p Weather App</title>
+        <link rel="stylesheet" type="text/css" href="static/styles.css">
     </head>
     <body>
         <h1>Chris Taylor's CS50p Weather App</h1>
