--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="static/styles.css">
     </head>
     <body>
-        <h1>Chris Taylor's CS50p Weather App</h1>
+        <h1>WeatherPy! CS50p Weather App</h1>
         <form action="/" method="POST">
             <input type="text" name="city" placeholder="Enter city">
             <select name="units">
