--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,22 @@
             <button type="submit">Get Weather</button>
         </form>
         {% if temperature and wind_speed and city and weather_description and weather_icon %}
-            <img src="http://openweathermap.org/img/w/{{ weather_icon }}.png" alt="{{ weather_description }}">
-            <h2>The weather in {{ city }} is {{ weather_description }}, current temprature is {{ temperature }}° and the wind speed is {{ wind_speed }}.</h2>
-        {% endif %}
+            <div class="weather-box">
+                <div class="weather-text">
+                    <h2>The weather in {{ city }} is {{ weather_description }}.</h2>
+                    <h2>Temp is  {{ temperature }}°.</h2>
+                    <h2>Wind speed is {{ wind_speed }}</h2>
+                </div>
+                <div class="weather-icon">
+                    <img src="http://openweathermap.org/img/w/{{ weather_icon }}.png" alt="{{ weather_description }}">
+                </div>
+            </div> {% endif %}
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+              <div class="alert">
+                {{ messages[0] }}
+              </div>
+            {% endif %}
+          {% endwith %}
     </body>
 </html>
